# autokernel

./: ak  bridge.sh  pyproject.toml  setup.cfg
src/: ak
src/autokernel/: main.py
src/bridge/: main.c
