[metadata]
name = autokernel
author = oddlama, PatrickDaG
author_email = oddlama@oddlama.org, patrickdgro@gmail.com
description = A tool to manage kernel configuration options
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/kekeleks/autokernel
project_urls =
    Documentation = https://example.com/TODO
    Source = https://github.com/kekeleks/autokernel
    Issues = https://github.com/kekeleks/autokernel/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: System :: Operating System Kernels
    Topic :: System :: Operating System Kernels :: Linux
    Topic :: Utilities
keywords = autokernel, config, kconf, kconfiglib, kernel, manager

[options]
zip_safe = False
python_requires = >=3.9
install_requires =
	jinja2
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    autokernel = autokernel.main:main
